# nixling-wlcontrol

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
crates/wlcontrol-cli/: Cargo.toml
crates/wlcontrol-cli/src/: main.rs
crates/wlcontrol-core/: Cargo.toml
crates/wlcontrol-core/src/: config.rs  error.rs  lib.rs  model.rs  plan.rs  reduce.rs  sources.rs
crates/wlcontrol-d2b/: Cargo.toml
crates/wlcontrol-d2b/src/: lib.rs  transport.rs  wire.rs
crates/wlcontrol-d2b/tests/: public_socket.rs
crates/wlcontrol-nixling/: Cargo.toml
crates/wlcontrol-nixling/src/: lib.rs  transport.rs
crates/wlcontrol-nixling/tests/: public_socket.rs
crates/wlcontrol-ui/: Cargo.toml
crates/wlcontrol-ui/src/: lib.rs  view_model.rs
crates/wlcontrol-waybar/: Cargo.toml
crates/wlcontrol-waybar/src/: lib.rs
data/: style.css  waybar-module.jsonc
docs/: configuration.md  controls.md  niri.md  security.md  waybar.md
