[package]
name = "wlcontrol-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "d2b-wlcontrol command-line entry point (Waybar module, control center, actions)."

[[bin]]
name = "d2b-wlcontrol"
path = "src/main.rs"

[dependencies]
wlcontrol-core.workspace = true
wlcontrol-d2b.workspace = true
wlcontrol-waybar = { path = "../wlcontrol-waybar" }
wlcontrol-ui = { path = "../wlcontrol-ui" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
