[package]
name = "wlcontrol-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Domain model, config, reducers, and action planning for d2b-wlcontrol."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
directories.workspace = true

[dev-dependencies]
serde_json.workspace = true
