[package]
name = "wlcontrol-d2b"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Direct d2bd public-socket client for d2b-wlcontrol."

[dependencies]
wlcontrol-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
nix = { workspace = true, features = ["poll", "time"] }

[dev-dependencies]
serde_json.workspace = true
