[package]
name = "wlcontrol-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GTK4/libadwaita control center for nixling-wlcontrol."

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
wlcontrol-core.workspace = true
wlcontrol-nixling.workspace = true
