[package]
name = "wlcontrol-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Quickshell layer-shell frontend launcher for nixling-wlcontrol."

[dependencies]
wlcontrol-core.workspace = true
serde_json.workspace = true
