[package]
name = "wlcontrol-waybar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Waybar custom-module renderer for d2b-wlcontrol."

[dependencies]
wlcontrol-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
